# mora-slop

./: CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  catalog.yaml  install.sh
.claude/commands/: new-skill.md
.github/: pull_request_template.md
docs/: BEST-PRACTICES.md  METRICS.md  ONBOARDING.md  PERMISSIONS-GUIDE.md  REJECTED-AUTOMATIONS.md
examples/: README.md
hooks/: README.md
prompt-library/engineering/: README.md
prompt-library/pm/: README.md
prompt-library/shared/: README.md
schemas/: one-pager.yaml  prd.yaml  stakeholder-brief.yaml
scripts/: generate-catalog.py  validate.sh
second-brain/: CLONE_PHIL_PLAN.md  DISCOVERY.md  README.md
second-brain/automation/: ARCHITECTURE.md  run-claude-task.sh
second-brain/blueprints/: 02-personal-knowledge-management.md  03-claude-agents-memory.md
second-brain/code/: pkm_ingest.py  wiki_lint.py  wiki_search.py
skills/: SKILL-TEMPLATE.md  cloud-cost-pulse.md  daily-digest.md  meeting-insights.md  meeting-to-jira.md  platform-okr-update.md  platform-pulse.md  pm-prd-generator.md  stakeholder-update.md  studio-pulse.md  todo.md  weekly-briefing.md  weekly-update-entry.md
velocity-scorecard/: .gitignore  README.md  pyproject.toml
velocity-scorecard-rs/: .env.example  .gitignore  .justfile  .rustfmt.toml  Cargo.toml  README.md
velocity-scorecard-rs/src/: config.rs  error.rs  main.rs  metrics.rs  scorecard.rs
velocity-scorecard-rs/src/display/: bar.rs  mod.rs  pr_table.rs  scorecard.rs
velocity-scorecard-rs/src/github/: mod.rs  types.rs
velocity-scorecard-rs/src/llm/: mod.rs  prompts.rs  types.rs
velocity-scorecard/src/velocity_scorecard/: cli.py  github_client.py  llm_scorer.py  metrics.py  output.py  scorecard.py
(+97 files in other folders)
